Colab kullanılarak oluşturuldu

--- a/DataScienceCaseStudy.ipynb
+++ b/DataScienceCaseStudy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjYai/p9UtUEjJLbPp0xvU",
+      "authorship_tag": "ABX9TyMXgrjkjM96Zv5p0O1rsVtT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Emporting the libraries."
+        "Importing the libraries."
       ],
       "metadata": {
         "id": "toxJxh5X23PL"
